Version 1.13.0-dev:
 * Add-ons server:
   * Add-on metadata pattern blacklisting implemented.
 * AI:
   * New Micro AI: Fast AI
   * Messenger Escort Micro AI: new optional parameters [filter],
     [filter_second] and invert_order=
   * Messenger Escort Micro AI: bug fix for escort units blocking messenger's
     progress
   * Several Micro AIs: fix a variety of rarely occurring but serious bugs, such
     as invalid savegames or disabling the AI from working for the rest of the
     turn or after changing the Micro AI settings.
   * Bug fix for requiring unnecessary keys for removal of several Micro AIs
   * Fixed a bug that made it impossible to change or delete Micro AIs after a
     game had been reloaded (bug #21750). This was a general bug in the RCA AI
     mechanism and applied to other CAs as well, but it was most visible in the
     Micro AIs.
   * Some internal reorganization of Micro AI code to facilitate customizing
     them for UMC and adding functionality from other versions of Wesnoth. Some
     code cleanup for consistency, readability and speed, as well as fixing of
     some minor and subtle bugs.
   * Fix bug in Random Recruit Micro AI: the AI can now handle custom castle
     terrain independent of its terrain code
   * Fix bug in Return Guardian Micro AI when there is no path to the return hex
 * Campaigns:
   * Changed all occurrences of {FLAG_VARIANT ragged} to {FLAG_VARIANT6 ragged}
   * Descent into Darkness:
     * Fixed various issues with player and enemy gold and income in
       'Descent into Darkness'.
   * Eastern Invasion:
     * In 'Captured', stolen gold won't be mentioned if the player had no
       carryover gold.
   * Northern Rebirth:
     * Fixed Sister Thera and Father Morvin respawning into the recall list if
       the other is on the north or west map edges.
   * Son of the Black Eye: some minor changes
     * S2: adjusted starting villages; scenario now ends if Kapou'e is already